<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title_back"
            style="@style/style_title_tv_back"
            android:text="@string/title_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_corner_white_line_shape"
            android:orientation="horizontal"
            android:padding="0.5dp"
            android:paddingLeft="1dp">

            <TextView
                android:id="@+id/tv_appstats_day"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@drawable/home_menu_selector_first"
                android:gravity="center"
                android:text="@string/str_appstats_day"
                android:textColor="@color/tv_rank_menu_selector"
                android:textSize="@dimen/s12" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tv_appstats_week"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="0.5dp"
                android:layout_marginTop="0.5dp"
                android:background="@drawable/home_menu_selector_middle"
                android:gravity="center"
                android:text="@string/str_appstats_week"
                android:textColor="@color/tv_rank_menu_selector"
                android:textSize="@dimen/s12" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tv_appstats_mon"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@drawable/home_menu_selector_last"
                android:gravity="center"
                android:text="@string/str_appstats_month"
                android:textColor="@color/tv_rank_menu_selector"
                android:textSize="@dimen/s12" />
        </LinearLayout>
        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_title_right_selector"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_select_time"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/d12"
            android:background="@drawable/tv_pressed_selector"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="Last Week"
            android:textColor="@color/tv_pressed_selector"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_title_name"
            style="@style/style_title_tv_name"
            android:layout_centerInParent="true"
            android:text="2016/7"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dmCuttingLine"
        android:layout_marginTop="@dimen/d8"
        android:background="@color/colorLine" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_appstats"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent" />
</LinearLayout>